<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/goal_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Goal_name" />

    <EditText
        android:id="@+id/goal_amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Goal_am"
        android:inputType="number" />

    <Button
        android:id="@+id/add_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add_goal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/goals_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>
