<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginBottom="8dp"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/goal_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Изменение TextView на ProgressBar -->
    <ProgressBar
        android:id="@+id/goal_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100" />

    <TextView
        android:id="@+id/goal_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp" />

    <EditText
        android:id="@+id/add_amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Add_Goal"
        android:inputType="number" />

    <Button
        android:id="@+id/add_amount_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />
    <Button
        android:id="@+id/delete_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />


</LinearLayout>
